@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (future 6.0.2, SVN branch-6-0):
 ---------------------------
 
+- Fixed Python Mapscript does not write COLOR to reference map (#4042)
+ 
 - Fixed cannot add a style to a label in PHP/SWIG Mapscript (#4038) 
 
 - Add missing support for outputFormat in WFS GetFeature POST XML requests (#4052)
